# wasmthello

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  file2bytearray.py  hello.wat
examples/rust/: Cargo.toml  build.sh  hello.wasm  hello.wat
examples/rust/src/: lib.rs
src/: game.rs  lib.rs  main.rs  playercontroller.rs  terminalplayer.rs  wasmplayer.rs
web/: Cargo.toml
web/src/: main.rs
