[package]
name = "wasmthello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = "0.33.0"

[target.'cfg(target_arch = "wasm32")'.lib]
crate-type = ["cdylib"]

[dependencies]
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.54"
