[package]
name = "wasmthello-rust-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
#wasmthello = { version = "0.1", path = "../../" }
wee_alloc = {version = "0.4.5", default-features = false}

[profile.release]
lto = true
